<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PMIS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登录</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="platform">工作台</string>
    <string name="exit">退出</string>
    <string name="workbench">工作台</string>
    <string name="reports_manager">报工管理</string>
    <string name="other">待开发</string>
    <string name="wellcome_reports_manager">报工管理</string>
    <string name="wellcome_workbench">工作台</string>
    <string name="back">返回</string>
	<string name="main">系统主页</string>
	<string name="my_reports">我的报工</string>
	<string name="review_reports">报工审核</string>
	<string name="create_report">新建报工</string>
	<string name="select_project">选择项目</string>
	<string name="create">新增</string>
	<string name="cancel">取消</string>
	<string name="done">完成</string>
	<string name="title">标题：</string>
	<string name="content">工作内容：</string>
	<string name="date">工作日期：</string>
	<string name="review_man">审核人员：</string>
	<string name="out">是否出差</string>
	<string name="project">报工项目：</string>
	<string name="department">部门：</string>
	<string name="position">工作地点：</string>
	<string name="all">全选</string>
	<string name="pass_all">批量通过</string>
	<string name="refuse_all">批量拒绝</string>
	<string name="report_details">报工详情</string>
	<string name="save">保存</string>
	<string name="pass">通过</string>
	<string name="refuse">拒绝</string>
	<string name="status">审核状态：</string>
	<string name="unstatus">待审核</string>
	<string name="search">搜索</string>
	<string name="working_time">工作小时：</string>
	<string name="start_time">开始时间：</string>
	<string name="end_time">结束时间：</string>
	<string name="note">审批信息：</string>
	<string name="last_one_day">近一天</string>
	<string name="last_two_day">近两天</string>
	<string name="reports_option">报工类型：</string>
	<string name="create_report_time">报工时间：</string>
	<string name="submit">提交</string>
	<string name="bigger">大于8h</string>
	<string name="smaller">小于8h</string>
	<string name="equal">8h</string>
	<string name="working_time_search_title">工作小时：</string>
	<string name="recent_projects">最近项目</string>
	<string name="department_projects">部门项目</string>
	<string name="search_projects">查询项目</string>
	<string name="setting">设置</string>
	<string name="pass_status">已审核</string>
	<string name="refuse_status">未通过</string>
	<string name="wait_status">待审核</string>
	<string name="delete">删除</string>
	<string name="about">关于我们</string>
	<string name="logout">注销</string>
	<string name="name">项目管理信息系统</string>
	<string name="sub_name">（PMIS）</string>
	<string name="remember">记住密码</string>
	<string name="version">版本号</string>
	<string name="review_report">审核报工</string>
	<string name="project_name">项目简称</string>
	<string name="about_us_content">待开发</string>
	<string name="more">点击查看更多....</string>
	
	<string name="searchMenu">查询</string>
    <string name="searchLabel">查询</string>
    <string name="searchHint">请输入查询内容</string>
    <string name="dialog_update_title">更新</string>
	<string name="dialog_update_msg">发现新版本，版本号：</string>
	<string name="dialog_update_size">文件大小：</string>
	<string name="dialog_update_msg2">，是否立即更新</string>
	<string name="dialog_update_btnupdate">更新</string>
	<string name="dialog_update_btnnext">下次再说</string>
	<string name="dialog_downloading_msg">正在下载更新。。。。。。</string>
	<string name="dialog_alert_title">警告</string>
	<string name="dialog_downfailed_btndown">重新下载</string>
	<string name="dialog_downfailed_btnnext">以后再说</string>
	<string name="dialog_error_title">错误</string>
	<string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>
</resources>
