<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfaf3"
    android:orientation="vertical" >
    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="48dip">
	    <TextView
	        android:textColor="#000000"
        	android:gravity="center"
        	android:layout_width="fill_parent"
        	android:layout_height="48dip"
        	android:textSize="20sp"
        	android:text="@string/select_project"
        />
	    <Button
        	android:textColor="@drawable/back_color_selector"
            android:background="@drawable/back_bg"
            android:layout_marginTop="9dip"
            android:layout_width="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:layout_height="30dip"
            android:layout_marginLeft="8dip"
        	android:text="@string/back"
        	android:onClick="back"
        />
	</RelativeLayout>
	<RadioGroup
	    android:id="@+id/radiogroup_select_projects"
	    android:layout_width="fill_parent"
	    android:layout_height="48dip"
	    android:orientation="horizontal">
	    <RadioButton
	        android:textColor="#000000"
	        android:gravity="center"
	        android:background="@drawable/radio_button_selector"
	        android:button="@null"
	        android:id="@+id/radiobutton_recent_projects"
	        android:text="@string/recent_projects"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"/>
	    <RadioButton
	        android:textColor="#000000"
	        android:gravity="center"
	        android:background="@drawable/radio_button_selector"
	        android:button="@null"
	        android:id="@+id/radiobutton_department_projects"
	        android:text="@string/department_projects"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"/>
	    <RadioButton
	        android:textColor="#000000"
	        android:gravity="center"
	        android:background="@drawable/radio_button_selector"
	        android:button="@null"
	        android:id="@+id/radiobutton_search_projects"
	        android:text="@string/search_projects"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"/>
	</RadioGroup>    
	<fragment
	    class="com.jiyuan.pmis.project.SelectProjectsRecentFragment"
        android:id="@+id/fragment_place"
   		android:layout_width="match_parent"
   		android:layout_height="match_parent" />

</LinearLayout>
