<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfaf3"
    android:orientation="vertical" >

    <RelativeLayout
        android:background="@color/menu"
        android:layout_width="fill_parent"
        android:layout_height="48dip" >

        <TextView
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="20sp" />

        <Button
            android:textColor="@drawable/back_color_selector"
            android:layout_marginTop="9dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_marginLeft="8dip"
            android:background="@drawable/back_bg"
            android:onClick="back"
            android:text="@string/back" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dip" >

        <LinearLayout
            android:clickable="true"
            style="@style/normal_style"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:orientation="horizontal" >

            <TextView
                android:textColor="#000000"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/version" />
            <TextView
                android:id="@+id/textview_version"
                android:textColor="#000000"
                android:text="1.0v"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:gravity="center|right"/>
        </LinearLayout>

        <TextView
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="48dip" />

        <Button
            android:textColor="#ffffff"
            android:gravity="center"
            android:onClick="logout"
            style="@style/logout_button_style"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:text="@string/logout"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>