<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_report_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfaf3" >

    <RelativeLayout
        android:id="@+id/my_report_details_top_menu"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@color/menu" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="9dip"
            android:background="@drawable/back_bg"
            android:onClick="back"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/back"
            android:textColor="@drawable/back_color_selector" />

        <TextView
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:text="@string/report_details"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/my_report_details_top_menu" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/reports_option" />

                <TextView
                    android:textColor="#2867a0"
                    android:textSize="14sp" 
                    android:clickable="false"
                    android:gravity="center|left"
                    style="@style/edittext_style"
                    android:id="@+id/textview_my_report_details_reports_option"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/project" />

                <TextView
                    android:id="@+id/textview_my_report_details_project"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:gravity="center|left"
                    android:text=""
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/working_time" />

                <EditText
                    android:id="@+id/edittext_my_report_details_working_time"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="1234567890."
                    android:gravity="center|left"
                    android:inputType="text"
                    android:text=""
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/position" />

                <EditText
                    android:id="@+id/edittext_my_report_details_position"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:inputType="text"
                    android:text=""
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/textview_my_report_details_date"
                    style="@style/textview_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text=""
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right|top"
                    android:text="@string/content" />

                <EditText
                    android:scrollbars = "vertical"
                    android:inputType="textMultiLine"
                    android:id="@+id/edittext_my_report_details_content"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|left"
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_report_review_status_box"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/textview_my_report_details_status"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text=""
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_report_details_review_man_box"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@string/review_man" />

                <TextView
                    android:id="@+id/textview_my_report_details_review_man"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text=""
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_report_details_note_box"
                android:layout_width="fill_parent"
                android:layout_height="100dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="top|right"
                    android:text="@string/note" />

                <TextView
                    android:scrollbars = "vertical"
                    android:id="@+id/textview_my_report_details_note"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="5"
                    android:gravity="top|left"
                    android:text=""
                    android:textColor="#2867a0"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/review_report_details_bottom_menu"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="50dip"
                android:layout_marginTop="20dip"
                android:background="@drawable/button"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_my_report_details_delete"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="#00ffffff"
                    android:gravity="center"
                    android:onClick="delete"
                    android:text="@string/delete"
                    android:textColor="@drawable/color_selector" />

                <TextView
                    android:textColor="#000000"
	            android:layout_width="1dip"
	            android:layout_height="match_parent"
	            android:background="#ffffff"/>
                <Button
                    android:id="@+id/btn_my_report_details_update"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="#00ffffff"
                    android:gravity="center"
                    android:onClick="update"
                    android:text="@string/save"
                    android:textColor="@drawable/color_selector" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>